--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,10 @@
       @apply text-[#ffffff]; /* Remove margin, padding, and use box-sizing: border-box */
     }
 }
+
+
+.reg-loading{
+  height: 30px;
+  width: 30px;
+  border: 3px solid white;
+}
